feat: 🛠️ 删除了没有用的文件，修复了数个bug，整理了用户界面

--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="./styles/base.css">
     <link rel="stylesheet" href="./styles/component.css">
-    <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/masks.css">
     <link rel="stylesheet" href="./styles/menu.css">
     <link rel="stylesheet" href="./styles/router.css">
+
+    <link rel="stylesheet" href="./styles/routed-page/archives.css">
+    <link rel="stylesheet" href="./styles/routed-page/create.css">
+    <link rel="stylesheet" href="./styles/routed-page/help.css">
 
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
 </head>
